--- a/hehe.html
+++ b/hehe.html
@@ -1,1 +1,9 @@
-<html><head></head><body><h1>HaHaHaHa</h1><h2>hehehehehehehehe</h2></body></html>
+<html>
+  <head>
+  </head>
+  <body>
+    <h1>HaHaHaHa</h1>
+    <h2>hehehehehehehehe</h2>
+    <h3>ohohohohohoh</h3>
+  </body>
+</html>
